--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "@fortawesome/fontawesome-free/css/all.min.css";
 
 body {
   font-size: 20px;
